--- a/InspiringIPT/InspiringIPT/Content/Site.css
+++ b/InspiringIPT/InspiringIPT/Content/Site.css
@@ -46,6 +46,9 @@ textarea {
     background-color:#2222AF;
     color: #ffffff;
 }
+.navbar-nav > li > a {
+    padding:10px;
+}
 .navbar-nav > li > .dropdown-menu {
     margin-top: 0;
     border-top-right-radius: 0;
