--- a/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
@@ -12,6 +12,9 @@
     @Scripts.Render("~/Scripts/jquery-ui-1.11.4.min.js")
     @Styles.Render("~/Content/Site.css")
     @Styles.Render("~/Content/bootstrap.css")
+    @Styles.Render("~/Content/bootstrap-select.min.css")
+
+   
 
     <meta name="description" content="The description of my page" />
 </head>
@@ -86,6 +89,8 @@
     @Scripts.Render("~/Scripts/bootstrap-datetimepicker.js")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/Scripts/Apoio.js")
+    @Scripts.Render("~/Scripts/bootstrap-select.min.js")
+  
 
 </body>
 </html>
