Content: Site.cs - atualização de algumas classes para o melhor aspecto do sistema
Controllers: PotencialAlunoController- atualização de algumas funcionalidades dos metodos

Views : atualização dos dados

--- a/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
@@ -1,6 +1,5 @@
 ﻿
-<div class="row">
- 
+<div class="row"><br /><br />
         <div class="col-sm-14" style="background-color:orange;">
             <h2 class="page-header">@ViewBag.Title <small>Sobre Nós:</small></h2>
         </div>
