--- a/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.AreaFK, "Area:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.AreaFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("AreasFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.AreaFK, "", new { @class = "text-danger" })
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.TipoCursoFK, "Tipo de Curso:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.TipoCursoFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("TiposCursosFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.TipoCursoFK, "", new { @class = "text-danger" })
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.EscolaFK, "Escola:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.EscolaFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("EscolasFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.EscolaFK, "", new { @class = "text-danger" })
