--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Details.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Details.cshtml
@@ -1,105 +1,102 @@
 ﻿@model InspiringIPT.Models.PotencialAluno
 
 <div class="row">
-    <br />
-    <div class="col-sm-14" style="background-color:lavenderblush;">
-        <h2 class="page-header">@ViewBag.Title <small> Ver os Detalhes <i class="glyphicon glyphicon-user"></i></small></h2>
+    <br /><br />
+    <div class="col-sm-14" style="background-color:antiquewhite;text-align:center;">
+        <h2 class="page-header">@ViewBag.Title <small> Mais informações sobre o Potencial Aluno <i class="glyphicon glyphicon-user"></i></small></h2>
     </div>
     <div class="col-sm-14" style="background-color:lavender">
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Area.NomeArea)
-            </dt>
+        
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.NomeCompleto)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Area.NomeArea)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.NomeCompleto)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Curso.NomeCurso)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Genero)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Curso.NomeCurso)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Genero)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.TipoC.Tipo)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.TipoC.Tipo)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.NomeCompleto)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.NomeCompleto)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Concelho)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Concelho)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ListaCursos)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Concelho)
-            </dt>
+                <dd>
+                    @* lista dos cursos *@
+                    @foreach (var curso in ViewBag.Cursos)
+                    {     @* mostra apenas o nome curso selecionado *@
+                        <p> @curso.NomeCurso</p>
+                    }
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Concelho)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ListaTipoCurso)
+                </dt>
+                <dd>
+                    @* lista dos tipos de cursos *@
+                    @foreach (var tipocurso in ViewBag.TipoCurso)
+                    {   @* mostra apenas o tipo de curso selecionado *@
+                        <p> @tipocurso.Tipo</p>
+                    }
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.DataNascimento)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ListaAreas)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.DataNascimento)
-            </dd>
+                <dd>
+                    @* lista das áreas *@
+                    @foreach (var area in ViewBag.Areas)
+                    {     @* mostra apenas a área selecionada *@
+                        <p> @area.NomeArea</p>
+                    }
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Contacto)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DataInscricao)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Contacto)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DataInscricao)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Genero)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.CodigoIdentificacao)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Genero)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.CodigoIdentificacao)
+                </dd>
+            </dl>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.DataInscricao)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.DataInscricao)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.HabAcademicas)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.HabAcademicas)
-            </dd>
-        </dl>
-    </div>
-    <div class="btn btn-secondary text-danger" style="height:40px">
-        <p>
-            @Html.ActionLink("Editar", "Edit", new { id = Model.AlunoID }, new { @class = "btn btn-warning" })
-            @Html.ActionLink("Listar os Potenciais Alunos", "Lista", "", new { @class = "btn btn-primary" })
-        </p>
+        <div class="btn btn-secondary text-danger" style="height:40px">
+            <p>
+                @Html.ActionLink("Voltar a Lista dos Alunos", "Index", "", new { @class = "btn btn-primary" })
+            </p>
+        </div>
         </div>
     </div>
 
