Na View, adição de dados dos utilizadores que fazem parte do sistema no método Sobre Nós

--- a/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
@@ -1,32 +1,34 @@
 ﻿
-<div class="row"><br /><br />
-        <div class="col-sm-14" style="background-color:orange;">
-            <h2 class="page-header">@ViewBag.Title <small>Sobre Nós:</small></h2>
-        </div>
+<div class="row">
+    <br />
+    <div class="col-sm-14" style="background-color:orange;">
+        <h2 class="page-header">@ViewBag.Title <small>Sobre Nós:</small></h2>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6" style="background-color:lightgreen;width:770px;">
                 <p>
-                A Inspiring IPTomar é uma equipa de Estudantes Colaboradores do IPT, que trabalha
-                primordialmente com as escolas secundárias, onde proporcionamos suporte ao sistema
-                educativo nacional que chegam directamente aos alunos, falando a sua linguagem e
-                ajudando-os na contrução do seu projeto de vida e de carreira com consciência das
-                suas capacidades e da realidade à sua volta e convidando esses mesmos alunos a virem 
-                estudar no Instituto Politécnico de Tomar.
-            </p>
-            <p>Nesta plataforma o aluno pode efectuar a sua pré-inscrição, preechendo o formulário
-               disponibilizado e submeter a sua inscrição.
-            </p>
+                    A Inspiring IPTomar é uma equipa de Estudantes Colaboradores do IPT, que trabalha
+                    primordialmente com as escolas secundárias, onde proporcionamos suporte ao sistema
+                    educativo nacional que chegam directamente aos alunos, falando a sua linguagem e
+                    ajudando-os na contrução do seu projeto de vida e de carreira com consciência das
+                    suas capacidades e da realidade à sua volta e convidando esses mesmos alunos a virem
+                    estudar no Instituto Politécnico de Tomar.
+                </p>
+                <p>
+                    Nesta plataforma o aluno pode efectuar a sua pré-inscrição, preechendo o formulário
+                    disponibilizado e submeter a sua inscrição.
+                </p>
             </div>
             <div class="col-sm-4" style="width:350px;height:150px;">
                 <img class="img-responsive" src="~/Imags/logotipo.jpg" alt="10px">
             </div>
         </div>
     </div>
-    
-        <div class="col-sm-14" style="background-color:deepskyblue;">
-            <h2 class="page-header">@ViewBag.Title <small> Divulgações nas Escolas: </small></h2>
-        </div>
+
+    <div class="col-sm-14" style="background-color:deepskyblue;">
+        <h2 class="page-header">@ViewBag.Title <small> Divulgações nas Escolas: </small></h2>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
@@ -41,5 +43,65 @@
         </div>
     </div>
 
-
+    <div class="row">
+        <div class="col-sm-12" style="text-align:center;color:lightblue">
+            <h2 class="page-header">@ViewBag.Title <medium> Utilizadores do Sistema <i class="glyphicon glyphicon-user"></i></medium></h2>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="thumbnail">
+                <img class="img-responsive" src="~/Imags/ImagemIPT.png" style="width:174px;">
+                <div class="caption">
+                    <h3 style="color:red">
+                        Tecnologias de Internet II<br/><br />
+                        <small>Ano Lectivo : 2016/2017</small>
+                    </h3>
+                    <p><b>Escola Superior de Tecnologia de Tomar</p></b>
+                    <p>Utilizadores(<b>COLABORADORES</b>)</p>
+                    <p><b>rita@ipt.pt </p>
+                    </b>
+                    <p><b>artur@ipt.pt</p></b>
+                    <p>Password:<b>kl096Ab:</b></p>
+                    <br />
+                    <br />
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="thumbnail">
+                <img class="img-responsive" src="~/Imags/gestor_valentim.jpg" style="width:200px;">
+                <div class="caption">
+                    <h3 style="color:red">
+                      
+                            Arruá Valentim Afonso<br />              
+                            <small>Nº:16284</small>
+                    </h3>
+                        <p>Utilizadores(<b>GESTORES</b>)</p>
+                        <p><b>arrua.ti2@ipt.pt </p>
+                    </b>
+                    <p><b>joana@ipt.pt</p></b>
+                    <p>Password:<b> kl096Ab:</b></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="thumbnail">
+                <img class="img-responsive" src="~/Imags/ImagemIPT.png" style="width:177px;">
+                <div class="caption">
+                    <h3 style="color:red">
+                        José Casimiro Pereira<br />
+                        <small>TI II - LEI</small>
+                    </h3>
+                    <p>Docente</p>
+                    <p>Utilizador(<b>GESTOR</b>): <b>casimiro@ipt.pt</b></p>
+                    <p>Password: <b>kl096Ab:</b></p>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
